create guide on how to manage product, create guide on how to how to create account

--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -355,20 +355,33 @@
     <Content Include="images\1 - add to cart.png" />
     <Content Include="images\1 - add to wish list.png" />
     <Content Include="images\1 - home page.png" />
+    <Content Include="images\1 - register new customer succeed.png" />
+    <Content Include="images\1 - register new customer.png" />
+    <Content Include="images\1- login admin account.png" />
     <Content Include="images\10 - link fake credit card.png" />
     <Content Include="images\10 - paypal checkout succeed.png" />
     <Content Include="images\2 - account selection page .png" />
     <Content Include="images\2 - add to cart.png" />
     <Content Include="images\2 - add to wish list.png" />
+    <Content Include="images\2 -change customer account password page.png" />
+    <Content Include="images\2 -change customer account password.png" />
+    <Content Include="images\2- Manage product page.png" />
     <Content Include="images\3 - account selection page .png" />
+    <Content Include="images\3 - add new product succeed.png" />
+    <Content Include="images\3 - add new product.png" />
     <Content Include="images\3 - remove from cart.png" />
     <Content Include="images\3 - view wishlist page.png" />
     <Content Include="images\4 - country selection page.png" />
     <Content Include="images\4 - remove from cart.png" />
     <Content Include="images\4 - remove to wishlist.png" />
+    <Content Include="images\4 - view product details page.png" />
+    <Content Include="images\4 - view product details.png" />
     <Content Include="images\5 - checkout shopping cart.png" />
+    <Content Include="images\5 - edit product details.png" />
     <Content Include="images\5 - mobile confirmation page.png" />
     <Content Include="images\6 - complete phone confirmation.png" />
+    <Content Include="images\6 - delete product confirmation.png" />
+    <Content Include="images\6 - delete product.png" />
     <Content Include="images\6 - view shopping cart.png" />
     <Content Include="images\7 - set up profile page.png" />
     <Content Include="images\7 - shopping cart checkout page.png" />
@@ -478,6 +491,8 @@
     <Content Include="Views\Home\Help.cshtml" />
     <Content Include="Views\Home\WishListGuide.cshtml" />
     <Content Include="Views\Home\ShoppingCartGuide.cshtml" />
+    <Content Include="Views\Home\ManageProductGuide.cshtml" />
+    <Content Include="Views\Home\ManageCustomerAccountGuide.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
