--- a/AspMVCECommerce/Web.config
+++ b/AspMVCECommerce/Web.config
@@ -20,7 +20,9 @@
   <system.net>
     <mailSettings>
       <smtp deliveryMethod="Network" from="no-reply@yourdomain.com">
-        <network host="smtp.gmail.com" userName="zaldys.ecommerce.demo@gmail.com" password="admin$2022" port="587" enableSsl="true" />
+        <!--<network host="smtp.gmail.com" userName="zaldys.ecommerce.demo@gmail.com" password="admin$2022" port="587" enableSsl="true" /> -->
+        
+        <network host="smtp.gmail.com" userName="zaldys.ecommerce.demo@gmail.com" password="snbhxynwauacyfft" port="587" enableSsl="true" />
       </smtp>
     </mailSettings>
   </system.net>
@@ -52,7 +54,7 @@
     <add key="Host" value="smtp.gmail.com" />
     <add key="Port" value="587" />
     <add key="MailFrom" value="zaldys.ecommerce.demo@gmail.com" />
-    <add key="Password" value="admin$123456" />
+    <add key="Password" value="snbhxynwauacyfft" />
     <!-- End of Confirmation Email Settings-->
     
     
