complete subscribe to newsletter guide

--- a/AspMVCECommerce/AspMVCECommerce.csproj
+++ b/AspMVCECommerce/AspMVCECommerce.csproj
@@ -359,6 +359,7 @@
     <Content Include="images\1 - pay with credit card checkout.png" />
     <Content Include="images\1 - register new customer succeed.png" />
     <Content Include="images\1 - register new customer.png" />
+    <Content Include="images\1 - subscribe to newsletter.png" />
     <Content Include="images\1- login admin account.png" />
     <Content Include="images\10 - link fake credit card.png" />
     <Content Include="images\10 - paypal checkout succeed.png" />
@@ -367,6 +368,7 @@
     <Content Include="images\2 - add to wish list.png" />
     <Content Include="images\2 - compare product page.png" />
     <Content Include="images\2 - pay with credit card generate fake credit card.png" />
+    <Content Include="images\2 - subscribe to newsletter.png" />
     <Content Include="images\2 -change customer account password page.png" />
     <Content Include="images\2 -change customer account password.png" />
     <Content Include="images\2- Manage product page.png" />
@@ -375,24 +377,29 @@
     <Content Include="images\3 - add new product.png" />
     <Content Include="images\3 - pay with credit card enter contact information.png" />
     <Content Include="images\3 - remove from cart.png" />
+    <Content Include="images\3 - subscribe to newsletter confirm email.png" />
     <Content Include="images\3 - view wishlist page.png" />
     <Content Include="images\4 - country selection page.png" />
     <Content Include="images\4 - pay with credit card click pay with credit card.png" />
     <Content Include="images\4 - remove from cart.png" />
     <Content Include="images\4 - remove to wishlist.png" />
+    <Content Include="images\4 - subscribe to newsletter confirmation complete.png" />
     <Content Include="images\4 - view product details page.png" />
     <Content Include="images\4 - view product details.png" />
     <Content Include="images\5 - checkout shopping cart.png" />
     <Content Include="images\5 - edit product details.png" />
     <Content Include="images\5 - mobile confirmation page.png" />
     <Content Include="images\5 - pay with credit card enter fake credit card info.png" />
+    <Content Include="images\5 - subscribe to newsletter top picks of the week.png" />
     <Content Include="images\6 - complete phone confirmation.png" />
     <Content Include="images\6 - delete product confirmation.png" />
     <Content Include="images\6 - delete product.png" />
     <Content Include="images\6 - pay with credit card payment succeed.png" />
+    <Content Include="images\6 - subscribe to newsletter unsubscribe.png" />
     <Content Include="images\6 - view shopping cart.png" />
     <Content Include="images\7 - set up profile page.png" />
     <Content Include="images\7 - shopping cart checkout page.png" />
+    <Content Include="images\7 - subscribe to newsletter unsubscribe complete.png" />
     <Content Include="images\8 - address page.png" />
     <Content Include="images\8 - login paypal account.png" />
     <Content Include="images\9 - generate fake credit card.png" />
